change version to fincad-0.0.3

--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.kongchen</groupId>
+    <groupId>com.github.aeq</groupId>
     <artifactId>swagger-maven-plugin</artifactId>
-    <version>fincad-0.0.2</version>
+    <version>fincad-0.0.3</version>
     <packaging>maven-plugin</packaging>
     <name>Swagger Maven Plugin</name>
     <description>
